0.3 (2012-12-11)
----------------

 * Provide `action` string in templates.

0.2 (2012-12-10)
----------------

 * Provide `old_values` dict in templates.
 * '*'-notifications are no longer triggered for @created actions.

0.1 (2012-12-09)
----------------

Everything is new!