@@ -1,6 +1,7 @@
 0.3 (2012-12-11)
 ----------------
 
+ * Allow configuration of conditional notifications.
  * Provide `action` string in templates.
 
 0.2 (2012-12-10)
